<resources>
    <string name="app_name">FramgiaCrb</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_login">Login</string>
    <string name="hint_email_input">Email</string>
    <string name="hint_password_input">Password</string>
    <string name="hint_password_confirm">Password confirmation</string>
    <string name="label_login">Login</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="or">OR</string>
    <string name="login_with_fb">Login with Facebook</string>
    <string name="login_with_gg">Login with Google</string>
    <string name="search">Search</string>
    <string name="calendar">Calendar</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="itemMonth">Month</string>
    <string name="few_day">4 Day</string>
    <string name="send_string">Invites</string>
    <string name="color">Color</string>
    <string name="setting_string">Settings</string>
    <string name="new_event">New Event</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hint_create_event_input">Title...</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="start">Start</string>
    <string name="date">04-07-2016</string>
    <string name="time_start">02:00</string>
    <string name="finish">Finish</string>
    <string name="time_finish">02:30</string>
    <string name="no_repeat">No Repeat</string>
    <string name="invite">Attendee</string>
    <string name="desciption">Desciption</string>
    <string name="event_name">lethuy123@framgia.com</string>
    <string name="all_day">All day</string>
    <string name="place">Place</string>
    <string name="select_date_start">Chọn ngày bắt đầu</string>
    <string name="select_date_finish">Chọn ngày kết thúc</string>
    <string name="select_time_start">Chọn giờ bắt đầu</string>
    <string name="select_time_finish">Chọn giờ kết thúc</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="action_edit_string">Edit</string>
    <string name="action_delete_string">Delete</string>
    <string name="time_string">Thoi gian</string>
    <string name="event_string">Su kien</string>
    <string name="loop_string">Repeat</string>
    <string name="description_string">Mieu ta</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_error">Error!!!</string>
    <string name="message_delete">Ban co muon xoa su kien nay</string>
    <string name="edit_event">Edit event</string>
    <string name="event_edit">Hop team Android</string>
    <string name="calendar_name">Calendar</string>
    <string name="today_string">To day</string>
    <string name="home">Home</string>
    <string name="message_error">Error</string>

    <string-array name="day_of_week">
        <item>SUN</item>
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
    </string-array>

    <string-array name="repeat_choice">
        <item>No Repeat</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string-array name="repeat_every">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>

    <string name="repeat_string">Repeats:</string>
    <string name="repeat_every_string">Repeat Every:</string>
    <string name="start_on_string">Start on:</string>
    <string name="end_string">End:</string>

    <string name="question">Question</string>
    <string name="delete">Are you sure want to delete?</string>
    <string name="yes">Yes</string>
    <string name="action_search">Search</string>

    <string name="message">MESSAGE</string>
    <string name="thongbao">Notification</string>
    <string name="fiftyminutes">15 minutes</string>
    <string name="thirtyminutes">30 minutes</string>
    <string name="onehours">1 hours</string>
    <string name="option">Option</string>
    <string name="minutes">Minute</string>
    <string name="hour">Hour</string>
    <string name="via_email">Via Email</string>
    <string name="via_notification">Via Notification</string>
    <string name="unable">Không thể đặt thời gian kết thúc sự kiện trước thời gian bắt đầu.</string>

    <string name="error_email_blank">Email can not blank!</string>
    <string name="error_email_invalid">Invalid email or password!</string>
    <string name="error_name_blank">Name can not blank!</string>
    <string name="error_name_short">Name is too short!</string>
    <string name="error_password_blank">Password can not blank!</string>
    <string name="error_password_short">Password is too short!</string>
    <string name="msg_wait">Please waiting...</string>
    <string name="bad_request">Bad request</string>
    <string name="error_unauthorized">Unauthorized!</string>
    <string name="error_server_not_found">Server not found!</string>
    <string name="error_internal_server_error">Internal server error!</string>
    <string name="error_unknown">Something went wrong! Please try again later!</string>
    <string name="error_response_data">Error response data!</string>
    <string name="msg_no_internet">No internet!</string>
    <string name="message_not_connect">Not connection</string>
    <string name="error">Not connect</string>
    <string name="create_error">Error</string>
    <string name="success">Create event success!</string>
    <string name="not_be_empty">Not be empty</string>
    <string name="Attendee">Attendee</string>
    <string name="attendee_search">Attendee</string>
    <string name="no_attendee">No Attendee</string>
    <string name="select_attendee">Attendee</string>
    <string name="message_logout">Logout Success!</string>
    <string name="time_picker_default">%1$02d:%2$02d</string>
    <string name="date_picker_default">%1$02d-%2$02d-%3$02d</string>
    <string name="error_create_event">Can\'t create event, please check connection</string>
    <string name="message_logout_success">Logout Success!</string>
    <string name="parse_exception">Date time unknown</string>
    <string name="action_setting">Setting</string>
    <string name="spinner_calendar_title">calendar</string>
    <string name="checkbox_birthday_title">birthday</string>
    <string name="checkbox_holiday_title">holiday</string>
    <string name="checkbox_reminder_title">reminder</string>
    <string name="calendar_key">calendarKey</string>
    <string name="birthday_key">birthDayKey</string>
    <string name="holiday_key">holidayKey</string>
    <string name="reminder_key">reminderKey</string>
    <string name="action_done">Done</string>
    <string name="update_fail">Update fail</string>
</resources>
