<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/calendar">
        <menu>
            <item
                android:id="@+id/day"
                android:title="@string/home"
                android:checked="true"
                android:icon="@drawable/ic_home" />
            <item
                android:id="@+id/week"
                android:title="@string/week"
                android:icon="@drawable/ic_view_week"/>
            <item
                android:id="@+id/itemMonth"
                android:title="@string/itemMonth"
                android:icon="@drawable/ic_view_module_black_24dp" />
        </menu>
    </item>
    <item android:title="@null">
        <menu>
            <item
                android:id="@+id/request_email"
                android:icon="@drawable/ic_send_black"
                android:title="@string/send_string" />
            <item
                android:id="@+id/color"
                android:title="@string/color"
                android:icon="@drawable/ic_color_lens_black_24dp" />
        </menu>
    </item>
    <group
        android:id="@+id/other_calendar"
        android:checkableBehavior="single">
    </group>
    <item android:title="@null">
        <menu>
            <item
                android:id="@+id/setting"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/setting_string" />
        </menu>
    </item>
</menu>