<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.MainActivity">
    <item
        android:id="@+id/today"
        android:title="@string/today_string"
        android:icon="@drawable/ic_today_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_setting"
        android:orderInCategory="200"
        android:title="@string/action_setting"
        app:showAsAction="never" />
</menu>
