<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/option"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_or" />
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_top_edit_text"
        card_view:cardCornerRadius="@dimen/cardCornerRadius_cardview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_top_edit_text">

            <EditText
                android:id="@+id/edtOption"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_cardview"
        card_view:cardCornerRadius="@dimen/cardCornerRadius_cardview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_left_item_search"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_left_item_search">

                <RadioButton
                    android:id="@+id/radioPhut"
                    android:layout_width="match_parent"
                    android:checked="true"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/padding_left_item_search"
                    android:layoutDirection="rtl"
                    android:text="@string/minutes"
                    android:textAlignment="textStart" />

                <RadioButton
                    android:id="@+id/radioGio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/padding_left_item_search"
                    android:layoutDirection="rtl"
                    android:text="@string/hour"
                    android:textAlignment="textStart" />

                <RadioButton
                    android:id="@+id/radioNgay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/padding_left_item_search"
                    android:layoutDirection="rtl"
                    android:text="@string/day"
                    android:textAlignment="textStart" />

                <RadioButton
                    android:id="@+id/radioTuan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/padding_left_item_search"
                    android:layoutDirection="rtl"
                    android:text="@string/week"
                    android:textAlignment="textStart" />
            </RadioGroup>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_cardview"
        card_view:cardCornerRadius="@dimen/cardCornerRadius_cardview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/padding_left_item_search"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_left_item_search">

                <RadioButton
                    android:id="@+id/radioNotifi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/padding_left_item_search"
                    android:layoutDirection="rtl"
                    android:text="@string/via_notification"
                    android:textAlignment="textStart" />

                <RadioButton
                    android:id="@+id/radioEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/padding_left_item_search"
                    android:layoutDirection="rtl"
                    android:text="@string/via_email"
                    android:textAlignment="textStart" />
            </RadioGroup>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>